manifests/openshift/scraper/skillhub/templates/deployment-config-os.yaml
##---
# Source: skillhub/templates/deployment-config-os.yaml


apiVersion: v1
kind: DeploymentConfig

metadata:
    name: scraper
    labels:
        app: skillhub
        run: scraper

spec:
    replicas: 1
    selector:
        run: scraper
    template:
        metadata:
            labels:
                run: scraper
        spec:
            containers:
            - name: scraper
              image: docker-registry.default.svc:5000/skillhub/scraper:latest
              imagePullPolicy: Always
              ports:
              - containerPort: 5000

              volumeMounts:
                - name: bitbucket-ssh-key
                  mountPath: /home/scraper/ssh
                  readOnly: true
            volumes:
              - name: bitbucket-ssh-key
                secret:
                    secretName: bitbucket-ssh-key

    triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
          automatic: true
          containerNames:
          - scraper
          from:
              kind: ImageStreamTag
              name: "scraper:latest"
