manifests/openshift/scraper/skillhub/templates/route-os.yaml
##---
# Source: skillhub/templates/route-os.yaml


apiVersion: v1
kind: Route
metadata:
    name: scraper
    labels:
        app: skillhub
        run: scraper
    annotations:
        haproxy.router.openshift.io/timeout: 600s
spec:
    host: scraper-skillhub.apps.ic.gc.ca
    tls:
        insecureEdgeTerminationPolicy: Redirect
        termination: edge
    to:
        kind: Service
        name: scraper
        weight: 100
    wildcardPolicy: None
